--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.2",
     "firebase-admin": "^4.1.3",
     "lodash": "^4.17.4",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0"
   }
 }
